sidenav alignment correction

--- a/src/app/sidenavigationbar/sidenavigationbar.component.css
+++ b/src/app/sidenavigationbar/sidenavigationbar.component.css
@@ -1,11 +1,7 @@
-example-container {
+.example-container {
   display: flex;
   flex-direction: column;
-  position: fixed;
-  min-height: 100%;
-  height: 100%;
-  min-width: 100%;
-  width: 100%;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -15,7 +11,7 @@ example-container {
 .example-is-mobile .example-toolbar {
   position: fixed;
   /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-  z-index: 10;
+  z-index: 25;
 }
 
 h1.example-app-name {
@@ -25,25 +21,11 @@ h1.example-app-name {
 .example-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  position: fixed;
   flex: 1;
-  display: flex;
-  height: 100%;
 }
 
 .example-is-mobile .example-sidenav-container {
   /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
-}
-
-.app-sidenav-content{
-  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1;
-  position: fixed;
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
 }
